firewall/iptables.rules
# Generated by iptables-save v1.4.14 on Wed May  6 10:15:33 2015
*filter
#for testing purpose open
:INPUT ACCEPT [380:33576]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [313:55738]


# SIP           UDP/TCP         5060/5061
#-A INPUT -p udp -m multiport --destination-port 5060,5061 -j ACCEPT
#-A INPUT -p tcp -m multiport --destination-port 5060,5061 -j ACCEPT

# IAX2          UDP             4569
-A INPUT -p udp --destination-port 4569 -j ACCEPT

# MGCP          UDP             2727
-A INPUT -p udp --destination-port 2727 -j ACCEPT

# SCCP          tcp             2000
-A INPUT -p tcp --destination-port 2000 -j ACCEPT

# RTP           UDP             1000 - 20000 (10,00 - 20,000)
-A INPUT -p udp -m multiport --destination-port 1000:20000 -j ACCEPT

# Manager       TCP             5038
-A INPUT -p tcp --destination-port 5038 -j ACCEPT

# H323          TCP             1720
-A INPUT -p tcp --destination-port 1720 -j ACCEPT

# Dundi         UDP             4520
-A INPUT -p udp --destination-port 4520 -j ACCEPT

# Unistim       UDP             5000
-A INPUT -p udp --destination-port 5000 -j ACCEPT


COMMIT
# Completed on Wed May  6 10:15:33 2015
